      small wrapper over the OpenCV DNN module as much as possible light and simple.
      vpDetectorDNN is specialized to handle object detection tasks and provide a "convenient"
      way to have the detection bounding boxes.
    . Improve eye to hand calibration
    . Improve PnP pose estimation
    . Compat with OpenCV 4
    . Compat with Fedora 29
  - Tutorials
    . New tutorial: Installation from source on a Jetson equipped with an Orbitty Carrier board
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-install-jetson.html
    . New tutorial: Using ViSP and Matlab
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-visp-matlab.html
    . New tutorial: PBVS with Panda 7-dof robot from Franka Emika
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-franka-pbvs.html
    . New tutorial: Visual-servoing with mBot Ranger educational robot kit
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-mbot-vs.html
    . New tutorial: Camera extrinsic calibration
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-calibration-extrinsic.html
    . New tutorial: Markerless generic model-based tracking using a color camera
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-tracking-mb-generic.html
    . New tutorial: Markerless generic model-based tracking using a stereo camera
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-tracking-mb-generic-stereo.html
    . New tutorial: Markerless generic model-based tracking using a RGB-D camera
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-tracking-mb-generic-rgbd.html
    . New tutorial: Markerless generic model-based tracking using AprilTag for initialization (use case)
      http://visp-doc.inria.fr/doxygen/visp-daily/tutorial-tracking-mb-generic-apriltag-live.html
    . New tutorial: Developement of an interface and demo between ViSP and Unity engine
      https://github.com/lagadic/visp_unity/blob/master/README.md
    . New tutorial: ViSP for Unity introduction