@@ -1231,3 +1231,26 @@ set(${var_name} \"${${var_name}}\")
 ")
   endforeach()
 endmacro()
+
+# files: A list of input files like headers (in)
+# paths: A list of corresponding paths (out)
+# usage: vp_find_path(type.h paths PATHS /usr/local)
+macro(vp_find_path files paths)
+  set(__paths "")
+  foreach(arg_ ${ARGN})
+    if("${arg_}" STREQUAL "PATHS")
+      set(__varname "__paths")
+    else()
+      list(APPEND ${__varname} ${arg_})
+    endif()
+  endforeach()
+  unset(__varname)
+  foreach(f_ ${${files}})
+    unset(path_ CACHE)
+    find_path(path_ ${f_} PATHS ${__paths})
+    if(path_)
+      list(APPEND ${paths} ${path_})
+    endif()
+  endforeach()
+  vp_list_unique(${paths})
+endmacro()
